@@ -19,6 +19,7 @@ Additions:
    * Initialize Emotion when necessary.
    * Elm_Win_Trap and elm_win_trap_set() to allow e17 integration.
    * elm_flip_go_to()
+   * Add smart callback "focus-in" and "focus-out" when an Elementary object gain or loose focus.
 
 Fixes:
 
