@@ -366,3 +366,7 @@
 2012-08-02  Cedric Bail
 
 	* Fix elm_image_orient_set/get.
+
+2012-08-03  Cedric Bail
+
+	* Add smart callback "focus-in" and "focus-out".
